Lab 7：中间代码生成实验/resources/java/lab7Parser.java
// Generated from D:/MyJavaStudy/Lab7/src/main/java\lab7.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class lab7Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LP=1, RP=2, LC=3, RC=4, SC=5, CM=6, LB=7, RB=8, MUL=9, EQ=10, COL=11, 
		MULEQ=12, DIVEQ=13, MODEQ=14, ADDEQ=15, SUBEQ=16, LSEQ=17, RSEQ=18, ANDEQ=19, 
		XOREQ=20, OREQ=21, QM=22, LOR=23, LAND=24, OR=25, XOR=26, AND=27, EQEQ=28, 
		NEQ=29, LT=30, GT=31, LTEQ=32, GTEQ=33, LSHIFT=34, RSHIFT=35, ADD=36, 
		SUB=37, DIV=38, MOD=39, INC=40, DEC=41, NOT=42, LNOT=43, DOT=44, ARROW=45, 
		TYPEDEF=46, EXTERN=47, STATIC=48, AUTO=49, VOID=50, CHAR=51, SHORT=52, 
		INT=53, LONG=54, FLOAT=55, DOUBLE=56, SIGNED=57, UNSIGNED=58, BOOL=59, 
		CONST=60, RESTRICT=61, VOLATILE=62, INLINE=63, CASE=64, DEFAULT=65, IF=66, 
		ELSE=67, SWITCH=68, DO=69, WHILE=70, FOR=71, GOTO=72, CONTINUE=73, BREAK=74, 
		RETURN=75, SIZEOF=76, STRUCT=77, UNION=78, IDENTIFIER=79, INTEGER_CONSTANT=80, 
		FLOATING_CONSTANT=81, CHARACTER_CONSTANT=82, STRING_LITERAL=83, COMMENT=84, 
		WS=85;
	public static final int
		RULE_translation_unit = 0, RULE_external_declaration = 1, RULE_function_definition = 2, 
		RULE_declaration_specifiers = 3, RULE_declaration_specifier = 4, RULE_storage_class_specifier = 5, 
		RULE_type_specifier = 6, RULE_typedef_name = 7, RULE_struct_or_union_specifier = 8, 
		RULE_struct_declaration = 9, RULE_struct_declarator_list = 10, RULE_struct_declarator = 11, 
		RULE_type_qualifier = 12, RULE_function_specifier = 13, RULE_declarator = 14, 
		RULE_direct_declarator = 15, RULE_pointer = 16, RULE_parameter_list = 17, 
		RULE_parameter_declaration = 18, RULE_declaration = 19, RULE_init_declarator_list = 20, 
		RULE_init_declarator = 21, RULE_initializer = 22, RULE_initializer_list = 23, 
		RULE_compound_statement = 24, RULE_block_item = 25, RULE_statement = 26, 
		RULE_labeled_statement = 27, RULE_expression_statement = 28, RULE_selection_statement = 29, 
		RULE_iteration_statement = 30, RULE_jump_statement = 31, RULE_expression = 32, 
		RULE_assignment_expression = 33, RULE_assignment_operator = 34, RULE_conditional_expression = 35, 
		RULE_logical_or_expression = 36, RULE_logical_and_expression = 37, RULE_inclusive_or_expression = 38, 
		RULE_exclusive_or_expression = 39, RULE_and_expression = 40, RULE_equality_expression = 41, 
		RULE_equality_operator = 42, RULE_relational_expression = 43, RULE_relational_operator = 44, 
		RULE_shift_expression = 45, RULE_shift_operator = 46, RULE_additive_expression = 47, 
		RULE_additive_operator = 48, RULE_multiplicative_expression = 49, RULE_multiplicative_operator = 50, 
		RULE_cast_expression = 51, RULE_unary_expression = 52, RULE_inc_dec_operator = 53, 
		RULE_unary_opeartor = 54, RULE_postfix_expression = 55, RULE_argument_expression_list = 56, 
		RULE_type_name = 57, RULE_abstract_declarator = 58, RULE_direct_abstract_declarator = 59, 
		RULE_primary_expression = 60, RULE_constant = 61;
	private static String[] makeRuleNames() {
		return new String[] {
			"translation_unit", "external_declaration", "function_definition", "declaration_specifiers", 
			"declaration_specifier", "storage_class_specifier", "type_specifier", 
			"typedef_name", "struct_or_union_specifier", "struct_declaration", "struct_declarator_list", 
			"struct_declarator", "type_qualifier", "function_specifier", "declarator", 
			"direct_declarator", "pointer", "parameter_list", "parameter_declaration", 
			"declaration", "init_declarator_list", "init_declarator", "initializer", 
			"initializer_list", "compound_statement", "block_item", "statement", 
			"labeled_statement", "expression_statement", "selection_statement", "iteration_statement", 
			"jump_statement", "expression", "assignment_expression", "assignment_operator", 
			"conditional_expression", "logical_or_expression", "logical_and_expression", 
			"inclusive_or_expression", "exclusive_or_expression", "and_expression", 
			"equality_expression", "equality_operator", "relational_expression", 
			"relational_operator", "shift_expression", "shift_operator", "additive_expression", 
			"additive_operator", "multiplicative_expression", "multiplicative_operator", 
			"cast_expression", "unary_expression", "inc_dec_operator", "unary_opeartor", 
			"postfix_expression", "argument_expression_list", "type_name", "abstract_declarator", 
			"direct_abstract_declarator", "primary_expression", "constant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "';'", "','", "'['", "']'", "'*'", 
			"'='", "':'", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", 
			"'&='", "'^='", "'|='", "'?'", "'||'", "'&&'", "'|'", "'^'", "'&'", "'=='", 
			"'!='", "'<'", "'>'", "'<='", "'>='", "'<<'", "'>>'", "'+'", "'-'", "'/'", 
			"'%'", "'++'", "'--'", "'~'", "'!'", "'.'", "'->'", "'typedef'", "'extern'", 
			"'static'", "'auto'", "'void'", "'char'", "'short'", "'int'", "'long'", 
			"'float'", "'double'", "'signed'", "'unsigned'", "'bool'", "'const'", 
			"'restrict'", "'volatile'", "'inline'", "'case'", "'default'", "'if'", 
			"'else'", "'switch'", "'do'", "'while'", "'for'", "'goto'", "'continue'", 
			"'break'", "'return'", "'sizeof'", "'struct'", "'union'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LP", "RP", "LC", "RC", "SC", "CM", "LB", "RB", "MUL", "EQ", "COL", 
			"MULEQ", "DIVEQ", "MODEQ", "ADDEQ", "SUBEQ", "LSEQ", "RSEQ", "ANDEQ", 
			"XOREQ", "OREQ", "QM", "LOR", "LAND", "OR", "XOR", "AND", "EQEQ", "NEQ", 
			"LT", "GT", "LTEQ", "GTEQ", "LSHIFT", "RSHIFT", "ADD", "SUB", "DIV", 
			"MOD", "INC", "DEC", "NOT", "LNOT", "DOT", "ARROW", "TYPEDEF", "EXTERN", 
			"STATIC", "AUTO", "VOID", "CHAR", "SHORT", "INT", "LONG", "FLOAT", "DOUBLE", 
			"SIGNED", "UNSIGNED", "BOOL", "CONST", "RESTRICT", "VOLATILE", "INLINE", 
			"CASE", "DEFAULT", "IF", "ELSE", "SWITCH", "DO", "WHILE", "FOR", "GOTO", 
			"CONTINUE", "BREAK", "RETURN", "SIZEOF", "STRUCT", "UNION", "IDENTIFIER", 
			"INTEGER_CONSTANT", "FLOATING_CONSTANT", "CHARACTER_CONSTANT", "STRING_LITERAL", 
			"COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "lab7.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public lab7Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Translation_unitContext extends ParserRuleContext {
		public List<External_declarationContext> external_declaration() {
			return getRuleContexts(External_declarationContext.class);
		}
		public External_declarationContext external_declaration(int i) {
			return getRuleContext(External_declarationContext.class,i);
		}
		public Translation_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translation_unit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lab7Visitor ) return ((lab7Visitor<? extends T>)visitor).visitTranslation_unit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Translation_unitContext translation_unit() throws RecognitionException {
		Translation_unitContext _localctx = new Translation_unitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translation_unit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 46)) & ~0x3f) == 0 && ((1L << (_la - 46)) & 15032647679L) != 0)) {
				{
				{
				setState(124);
				external_declaration();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class External_declarationContext extends ParserRuleContext {
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public External_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_external_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lab7Visitor ) return ((lab7Visitor<? extends T>)visitor).visitExternal_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final External_declarationContext external_declaration() throws RecognitionException {
		External_declarationContext _localctx = new External_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_external_declaration);
		try {
			setState(132);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				function_definition();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_definitionContext extends ParserRuleContext {
		public Declaration_specifiersContext declaration_specifiers() {
			return getRuleContext(Declaration_specifiersContext.class,0);
		}
		public DeclaratorContext declarator() {
			return getRuleContext(DeclaratorContext.class,0);
		}
		public TerminalNode LP() { return getToken(lab7Parser.LP, 0); }
		public TerminalNode RP() { return getToken(lab7Parser.RP, 0); }
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lab7Visitor ) return ((lab7Visitor<? extends T>)visitor).visitFunction_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_definitionContext function_definition() throws RecognitionException {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			declaration_specifiers();
			setState(135);
			declarator();
			setState(136);
			match(LP);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 46)) & ~0x3f) == 0 && ((1L << (_la - 46)) & 15032647679L) != 0)) {
				{
				setState(137);
				parameter_list();
				}
			}

			setState(140);
			match(RP);
			setState(141);
			compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaration_specifiersContext extends ParserRuleContext {
		public List<Declaration_specifierContext> declaration_specifier() {
			return getRuleContexts(Declaration_specifierContext.class);
		}
		public Declaration_specifierContext declaration_specifier(int i) {
			return getRuleContext(Declaration_specifierContext.class,i);
		}
		public Declaration_specifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_specifiers; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lab7Visitor ) return ((lab7Visitor<? extends T>)visitor).visitDeclaration_specifiers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaration_specifiersContext declaration_specifiers() throws RecognitionException {
		Declaration_specifiersContext _localctx = new Declaration_specifiersContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration_specifiers);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(144); 
			_errHandler.sync(this);
			_alt = 1+1;
			do {
				switch (_alt) {
				case 1+1:
					{
					{
					setState(143);
					declaration_specifier();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(146); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaration_specifierContext extends ParserRuleContext {
		public Storage_class_specifierContext storage_class_specifier() {
			return getRuleContext(Storage_class_specifierContext.class,0);
		}
		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class,0);
		}
		public Type_qualifierContext type_qualifier() {
			return getRuleContext(Type_qualifierContext.class,0);
		}
		public Function_specifierContext function_specifier() {
			return getRuleContext(Function_specifierContext.class,0);
		}
		public Declaration_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_specifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lab7Visitor ) return ((lab7Visitor<? extends T>)visitor).visitDeclaration_specifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaration_specifierContext declaration_specifier() throws RecognitionException {
		Declaration_specifierContext _localctx = new Declaration_specifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration_specifier);
		try {
			setState(152);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPEDEF:
			case EXTERN:
			case STATIC:
			case AUTO:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				storage_class_specifier();
				}
				break;
			case VOID:
			case CHAR:
			case SHORT:
			case INT:
			case LONG:
			case FLOAT:
			case DOUBLE:
			case SIGNED:
			case UNSIGNED:
			case BOOL:
			case STRUCT:
			case UNION:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				type_specifier();
				}
				break;
			case CONST:
			case RESTRICT:
			case VOLATILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(150);
				type_qualifier();
				}
				break;
			case INLINE:
				enterOuterAlt(_localctx, 4);
				{
				setState(151);
				function_specifier();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Storage_class_specifierContext extends ParserRuleContext {
		public TerminalNode TYPEDEF() { return getToken(lab7Parser.TYPEDEF, 0); }
		public TerminalNode EXTERN() { return getToken(lab7Parser.EXTERN, 0); }
		public TerminalNode STATIC() { return getToken(lab7Parser.STATIC, 0); }
		public TerminalNode AUTO() { return getToken(lab7Parser.AUTO, 0); }
		public Storage_class_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_storage_class_specifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lab7Visitor ) return ((lab7Visitor<? extends T>)visitor).visitStorage_class_specifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Storage_class_specifierContext storage_class_specifier() throws RecognitionException {
		Storage_class_specifierContext _localctx = new Storage_class_specifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_storage_class_specifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1055531162664960L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_specifierContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(lab7Parser.VOID, 0); }
		public TerminalNode CHAR() { return getToken(lab7Parser.CHAR, 0); }
		public TerminalNode SHORT() { return getToken(lab7Parser.SHORT, 0); }
		public TerminalNode INT() { return getToken(lab7Parser.INT, 0); }
		public TerminalNode LONG() { return getToken(lab7Parser.LONG, 0); }
		public TerminalNode FLOAT() { return getToken(lab7Parser.FLOAT, 0); }
		public TerminalNode DOUBLE() { return getToken(lab7Parser.DOUBLE, 0); }
		public TerminalNode SIGNED() { return getToken(lab7Parser.SIGNED, 0); }
		public TerminalNode UNSIGNED() { return getToken(lab7Parser.UNSIGNED, 0); }
		public TerminalNode BOOL() { return getToken(lab7Parser.BOOL, 0); }
		public Struct_or_union_specifierContext struct_or_union_specifier() {
			return getRuleContext(Struct_or_union_specifierContext.class,0);
		}
		public Typedef_nameContext typedef_name() {
			return getRuleContext(Typedef_nameContext.class,0);
		}
		public Type_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_specifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof lab7Visitor ) return ((lab7Visitor<? extends T>)visitor).visitType_specifier(this);
			else return visitor.visitChildren(this);
		}
	}
